--- a/index.html
+++ b/index.html
@@ -309,13 +309,13 @@
 
         <!-- Chapter 4: The Dubai Decision -->
         <section class="chapter chapter-4" id="chapter4">
-            <div class="chapter-content">
-                <h1 class="chapter-title cinematic-text">I rejected a Dubai on-campus opportunity…</h1>
-                <p class="reveal-line big-reveal">…because no job is worth risking our love.</p>
-                <p class="reveal-line big-reveal">…I cannot be an entire continent away from you.</p>
-            </div>
-            <div class="golden-hearts"></div>
-        </section>
+    <div class="chapter-content">
+        <h1 class="chapter-title cinematic-text">I declined an opportunity in Dubai…</h1>
+        <p class="reveal-line big-reveal">…my heart has always been set on building a life in Kolkata.</p>
+        <p class="reveal-line big-reveal">…the thought of being so far from you and my family was a price I could never pay.</p>
+    </div>
+    <div class="golden-hearts"></div>
+</section>
 
         <!-- Chapter 5: Memories Gallery -->
         <section class="chapter chapter-5" id="chapter5">
@@ -413,12 +413,12 @@
                 <h1 class="chapter-title giant-text">I choose you, Anushree.</h1>
 
                 <div class="promises">
-                    <p class="promise-line">I will communicate better.</p>
-                    <p class="promise-line">I will trust you completely.</p>
-                    <p class="promise-line">I will not let insecurities hurt us.</p>
-                    <p class="promise-line">I will heal myself.</p>
-                    <p class="promise-line final-promise">I will love you softly, deeply, fearlessly.</p>
-                </div>
+    <p class="promise-line">I will always make time for us to talk, and truly listen.</p>
+    <p class="promise-line">I will have faith in us, and in the love we share.</p>
+    <p class="promise-line">I will nurture a security that allows us both to grow.</p>
+    <p class="promise-line" style="background: #fff3cd; padding: 12px; border-radius: 8px; border-left: 4px solid #ffc107; margin: 20px 0; font-weight: bold;">And it starts with me taking you to dinner.</p>
+    <p class="promise-line final-promise">My promise is to love you with a calm heart and an open mind, today and always.</p>
+</div>
 
                 <div class="beating-heart">
                     <div class="heart">💖</div>
@@ -434,5 +434,6 @@
 
     <script src="script.js"></script>
 </body>
+
 
 </html>
