--- a/index.html
+++ b/index.html
@@ -311,12 +311,12 @@
         <section class="chapter chapter-4" id="chapter4">
     <div class="chapter-content">
         <h1 class="chapter-title cinematic-text">I declined an opportunity in Dubai…</h1>
-        <p class="reveal-line big-reveal">…my heart has always been set on building a life in Kolkata.</p>
-        <p class="reveal-line big-reveal">…the thought of being so far from you and my family was a price I could never pay.</p>
+        <p class="reveal-line big-reveal">…because my heart is set on building our life here in Kolkata.</p>
+        <p class="reveal-line big-reveal">And if my career takes me to another city, I will find a way to be with you.</p>
+        <p class="reveal-line big-reveal">Just as I know you'd follow a great offer to mine. We'll make it work, together.</p>
     </div>
     <div class="golden-hearts"></div>
 </section>
-
         <!-- Chapter 5: Memories Gallery -->
         <section class="chapter chapter-5" id="chapter5">
             <div class="chapter-content">
@@ -437,3 +437,4 @@
 
 
 </html>
+
