--- a/index.html
+++ b/index.html
@@ -261,17 +261,13 @@
                 <h2 class="chapter-subtitle reveal-text">But I dreamt of a little future with you.</h2>
 
                 <div class="future-dreams">
-                    <p class="dream-line">I'm in my final year now.</p>
-                    <p class="dream-line">In 9 months, I'll be placed.</p>
-                    <p class="dream-line">Maybe away from Kolkata.</p>
-                    <p class="dream-line">I know long distance scares you.</p>
-                    <p class="dream-line">But distance won't win.</p>
-                    <p class="dream-line">I'll work for a high-paying job.</p>
-                    <p class="dream-line">Or start my own business.</p>
-                    <p class="dream-line">So I can stay close to you.</p>
-                    <p class="dream-line final-dream">I want a peaceful, loving life with you.</p>
-                </div>
-
+    <p class="dream-line">I'm in my final year now.</p>
+    <p class="dream-line">In 9 months, I'll be launching my career.</p>
+    <p class="dream-line">I'm aiming for a high-paying role, or perhaps starting my own venture.</p>
+    <p class="dream-line">My ambition is to build a life of success and stability.</p>
+    <p class="dream-line">And the best part of that success?</p>
+    <p class="dream-line final-dream">Building it with you by my side.</p>
+</div>
                 <div class="future-images">
                     <!-- IMAGE #11 -->
                     <div class="image-container">
@@ -437,4 +433,5 @@
 
 
 </html>
+
 
